# GraphColorer

./: CMakeLists.txt  README.md  bfs.cpp  bfs.h  completeGraph.cpp  completeGraph.h  cycleGraph.cpp  cycleGraph.h  firstFit.cpp  firstFit.h  graph.cpp  graph.h  graphColorer.cpp  graphColorer.h  incidenceOrder.cpp  incidenceOrder.h  linkedList.h  main.cpp  randomGraph.cpp  randomGraph.h  randomOrder.cpp  randomOrder.h  smallestLast.cpp  smallestLast.h  smallestOriginalDegree.cpp  smallestOriginalDegree.h
